<resources>
    <string name="app_name">شِفرة</string>
    <string name="app_title">لغة شِفرة</string>
    <string name="splash_tagline">أبسط لغة برمجة عربية</string>
    <string name="edit_hint">اكتب برنامجك بلغة شِفرة هنا\nعرف ترحيب(اسم):\n    أعد "مرحبا " + اسم\nاطبع(ترحيب("ليان"))</string>
    <string name="run">تشغيل</string>
    <string name="run_hint">التشغيل</string>
    <string name="menu">القائمة</string>
    <string name="demo">مثال</string>
    <string name="new_file">جديد</string>
    <string name="open">فتح ملف</string>
    <string name="save">حفظ</string>
    <string name="save_as">حفظ باسم</string>
    <string name="undo">تراجع</string>
    <string name="redo">إعادة</string>
    <string name="snippets">مقتطفات</string>
    <string name="save_snippet">حفظ كمقتطف</string>
    <string name="fix_indent">إصلاح المسافات</string>
    <string name="close_tab">إغلاق التبويب</string>
    <string name="back">عودة</string>
    <string name="copy">نسخ</string>
    <string name="copy_done">تم النسخ</string>
    <string name="unsaved_title">بدون اسم</string>
    <string name="running">جارِ التشغيل…</string>
    <string name="elapsed">ثوانٍ</string>
    <string name="exit_code">رمز الخروج: %1$d</string>
    <string name="saved_toast">تم الحفظ</string>
    <string name="not_ready">المفسِّر غير جاهز</string>
    <string name="empty_code">أكتب بعض الأكواد أولاً ثم اضغط تشغيل</string>
    <string name="snippet_name_hint">اسم المقتطف</string>
    <string name="snippet_saved">تم حفظ المقتطف</string>
    <string name="snippet_name_required">اكتب اسماً أولاً</string>
    <string name="snippet_custom">مخصص</string>
    <string name="choose_example">اختر مثالا</string>
    <string name="menu_file">ملف</string>
    <string name="menu_edit">تعديل</string>
    <string name="menu_settings">الإعدادات</string>
    <string name="close_confirm_title">إغلاق بدون حفظ؟</string>
    <string name="close_confirm_msg">هل تريد حفظ التغييرات في «%1$s» قبل الإغلاق؟</string>
    <string name="discard">عدم الحفظ</string>
    <string name="cancel">إلغاء</string>
    <string name="settings_snippets">المقتطفات المعروضة</string>
    <string name="settings_snippets_hint">اكتب مقتطفاً في شطرين:\nالسطر الأول: اسم المقتطف\nالسطر الثاني: النص نفسه\nوافصل بين المقتطفات بسطر فارغ.\nالرمز $ يحدد مكان المؤشر.\n\nمثال:\nسلام\nاطبع("السلام عليكم")\n\nإن شرط:\n    $</string>
    <string name="term_input_hint">سطر الإدخال…</string>
    <string name="term_send">إرسال</string>
    <string name="settings_font">الخط</string>
    <string name="settings_font_size">حجم الخط</string>
    <string name="font_mono">أحادي المسافات</string>
    <string name="font_sans">سانس سيريف</string>
    <string name="font_serif">سيريف</string>
    <string name="find">بحث</string>
    <string name="find_hint">ابحث…</string>
    <string name="find_prev">السابق</string>
    <string name="find_next">التالي</string>
    <string name="replace">استبدال</string>
    <string name="replace_hint">استبدل بـ…</string>
    <string name="replace_one">استبدال</string>
    <string name="replace_all">استبدال الكل</string>
    <string name="no_matches">لا توجد نتائج</string>
    <string name="replace_done">عملية استبدال</string>
    <string name="goto_line">الانتقال إلى سطر</string>
    <string name="settings_wrap">الالتفاف التلقائي للأسطر</string>
</resources>